ingress/test/1-grafana.yaml

# ingress to expose the grafana
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana
  namespace: app
  annotations:
      cert-manager.io/issuer: letsencrypt-grafana
spec:
  ingressClassName: external-nginx
  tls: 
  - hosts:
    - monitor.shuhai.de
    secretName: monitor-shuhai-de-key-pair
  rules:
  - host: monitor.shuhai.de
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: grafana
            port:
              number: 3000
